# fastemplate

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.idx/: dev.nix
app/: main.py  models.py
app/admin/: __init__.py  auth.py  item.py  user.py
app/alembic/versions/: 496bfdf99108_add_timestamp_to_models.py  e2412789c190_initialize_models.py  f7ac92519f28_add_timestampedmodel.py
app/api/routes/: items.py  users.py
app/core/: config.py
app/crud/: __init__.py  item.py  user.py
app/models/: __init__.py  base.py  item.py  user.py
scripts/: migrate.sh
